src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@bob123_fly.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 10
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 10
  name: bob123
verb:
  type: verb
  range:
    start:
      line: 1
      character: 7
    end:
      line: 1
      character: 10
  name: fly
parts: []
