src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@john-_run.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 9
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 9
  name: john-
verb:
  type: verb
  range:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 9
  name: run
parts: []
