src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@john-doe123_run-fast.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 20
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 20
  name: john-doe123
verb:
  type: verb
  range:
    start:
      line: 1
      character: 12
    end:
      line: 1
      character: 20
  name: run-fast
parts: []
