src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@john_run.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 8
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 8
  name: john
verb:
  type: verb
  range:
    start:
      line: 1
      character: 5
    end:
      line: 1
      character: 8
  name: run
parts: []
