src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@my-name_jump-fast.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 17
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 17
  name: my-name
verb:
  type: verb
  range:
    start:
      line: 1
      character: 8
    end:
      line: 1
      character: 17
  name: jump-fast
parts: []
