src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_delete_@hello.txt.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 23
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 23
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 23
  name: delete
parts:
  - FilePath:
      type: filepath
      range:
        start:
          line: 1
          character: 13
        end:
          line: 1
          character: 23
      path: hello.txt
