src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_delete_bar_$(git_diff).snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 28
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 28
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 28
  name: delete
parts:
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          character: 13
        end:
          line: 1
          character: 28
      text: bar
  - InlineShell:
      type: inline_shell
      range:
        start:
          line: 1
          character: 17
        end:
          line: 1
          character: 28
      code: git diff
