src/ast/snapshots/lakonik__ast__parser__tests__parse_statement_snapshot@qwen3_edit_$(ls)_foo.snap
---
source: src/ast/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 20
vocative:
  type: vocative
  range:
    start:
      line: 1
      character: 0
    end:
      line: 1
      character: 20
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 20
  name: edit
parts:
  - InlineShell:
      type: inline_shell
      range:
        start:
          line: 1
          character: 11
        end:
          line: 1
          character: 20
      code: ls
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          character: 17
        end:
          line: 1
          character: 20
      text: foo
